Prevent minicart badge to capture tapping on mobile

--- a/src/components/addtocart/addtocart.scss
+++ b/src/components/addtocart/addtocart.scss
@@ -246,6 +246,7 @@ $addtocart_ajax-fail-bg-secondary: $color_error-600 !default;
         z-index: 600;
         transition: top 0.9s cubic-bezier(0.42, 0.31, 0.34, 0.93),
             left 0.9s cubic-bezier(0.42, 0.31, 0.34, 0.93);
+        pointer-events: none;
 
         &--animating {
             animation: move-qty-badge 1.2s cubic-bezier(0.42, 0.31, 0.34, 0.93);
@@ -339,13 +340,11 @@ $addtocart_ajax-fail-bg-secondary: $color_error-600 !default;
         }
 
         #{$root}__feedback-bg {
+            transition-delay: 0.2s;
+
             &,
             &:after {
                 transition: transform 0.4s cubic-bezier(0.86, 0.01, 0.83, 0.51);
-            }
-
-            & {
-                transition-delay: 0.2s;
             }
 
             &:after {
